...
class GridView: UIView {
    let collectionView: UICollectionView = {
        let layout = UICollectionViewFlowLayout()
        let collectionView = UICollectionView(frame: .zero, collectionViewLayout: layout)
        collectionView.registerCell(CurrencyCell.self)
        collectionView.backgroundColor = .white
        collectionView.accessibilityIdentifier = "currencyCollectionView"
        return collectionView
    }()
    
    var exchangeRates = [RateModel]()
    private let itemSpacing: CGFloat = 10.0
    
...

class CurrencyCell: UICollectionViewCell {
    private let title: UILabel = {
        let label = UILabel()
        label.textAlignment = .center
        label.textColor = .black
        label.accessibilityIdentifier = "currencyTitle"
        return label
    }()
    
    private let conversion: UILabel = {
        let label = UILabel()
        label.textAlignment = .center
...
